# fin-dash

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  RUNBOOK.md  data_contract.md  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py  temp_debug.py  temp_diag.py  temp_diag2.py
.claude/: settings.local.json
.streamlit/: config.toml  secrets.toml.example
agg_v2/: channel_monthly.parquet  manifest.json  ticker_monthly.parquet
analytics/: README.md  duckdb_views_manifest.json
app/: __init__.py  acceptance.py  agg_store.py  data.py  data_contract.py  data_gateway.py  data_loader.py  date_align.py  dimensions.py  drill_events.py  drill_paths.py  duckdb_store.py  export_utils.py  filters.py  filters_contract.py  filters_validation.py  guardrails.py  main.py  observability.py  optional_deps.py  perf_budget.py  state.py
configs/: agg_policy.example.yml  aum_rules.yml  cache_policy.example.yml  drill_paths.yml  duckdb_policy.example.yml  firm_qa_policy.yml  metric_contract.yml  metrics_policy.yml  perf_budget.example.yml  perf_budget.yml  rollup_rules.yml
curated/: dim_channel.parquet  dim_geo.parquet  dim_product.parquet  dim_time.parquet  fact_enriched.parquet  fact_monthly.meta.json  fact_monthly.parquet
curated_v2/: channel_mapping.parquet  data_mapping_normalized.parquet  data_summary_normalized.parquet  etf_raw.parquet  executive_summary_raw.parquet  metrics_monthly.meta.json  metrics_monthly.parquet
docs/: AUDIT_CLOUD_VS_LOCAL_KPI_MISMATCH.md  DATA_PARITY_CHECKLIST.md  DEMO_POLISH_SUMMARY.md  DEPLOY.md  LLM_CLOUD_SAFETY.md  (+17 more)
(+377 files in other folders)
