[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

# For local dev / pip install -e . Align with requirements.txt where possible.
# Streamlit Cloud uses requirements.txt (canonical); see README and docs/DEPLOY.md.
[project]
name = "finance-dash"
version = "0.1.0"
description = "Streamlit BI/NLQ dashboard for finance metrics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "streamlit",
    "pydantic>=2",
    "pyyaml",
    "plotly",
    "tabulate",
    "anthropic>=0.39",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = ["pytest", "duckdb"]
pdf = ["reportlab"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "models*", "etl*", "legacy*"]
